Fix issue with logo animation alignment, resolves #14

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.stacked > * {
+	grid-area: 1 / 1 / 2 / 2;
+}
